...

  function handleLoad() {
    navigate(inputTxid.trim().toLowerCase())
  }

  function handleBroadcast() {
    broadcast(inputTxid.trim().toLowerCase())
  }

  function handleExample(txid: string) {
    setInputTxid(txid)
    navigate(txid)
  }
...
