...
                  disabled={checkingPayjoin}
                  onPress={skipPayjoinAndSign}
                />
              </SSVStack>
            ) : (
              <SSButton
                testID="send-broadcast"
                variant="secondary"
                label={
                  broadcasted ? t('sent.broadcasted') : t('send.broadcast')
                }
                disabled={!signed || (!psbt && !signedTx) || broadcasted}
                loading={broadcasting}
...
