...
            colors={[Colors.gray[700], Colors.gray[880]]}
            end={GRADIENT_END}
            start={GRADIENT_START}
            style={styles.topBorder}
          />
          <SSActionButton
            testID="account-receive"
            onPress={props.onReceive}
            style={styles.actionButton}
          >
            <SSText uppercase>Receive</SSText>
          </SSActionButton>
        </View>
...
