...
          <Stack.Screen
            name="index"
            initialParams={{
              segment: params?.segment,
              tab: t('navigation.label.signer')
            }}
            options={{ title: 'Signer' }}
          />
        )
      case '(explorer)':
        return (
          <Stack.Screen
            name="index"
...
